--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,15 +1,44 @@
 name: deploy
 
 on:
-    push:
-        branches:
-        - master
+  push:
+    branches: [master]
 
 
 jobs:
-  main:
+  prepare:
+    name: Prepare
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Clone repository
+        uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version-file: backend/go.mod
+
+      - name: Verify code formatting
+        working-directory: ${{ github.workspace }}/backend
+        run: |
+          go install mvdan.cc/gofumpt@latest
+          test -z $(gofumpt -l .)
+
+      - name: Run linter
+        working-directory: ${{ github.workspace }}/backend
+        run: |
+          go install honnef.co/go/tools/cmd/staticcheck@latest
+          staticcheck ./...
+
+      - name: Run tests with coverage
+        working-directory: ${{ github.workspace }}/backend
+        run: go test -cover ./...
+
+  deploy:
     name: Deploy
     runs-on: ubuntu-latest
+    needs: prepare
 
     env:
       OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }}
@@ -40,4 +69,5 @@ jobs:
         project_id: ${{ env.GCP_PROJECT_ID }}
 
     - name: Deploy to GCP
+      working-directory: ${{ github.workspace }}/backend
       run: ./build-container
