--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -1,21 +1,27 @@
 services:
   app:
     build: .
+    init: true
     ports:
       - 8080:8080
     depends_on:
       database:
         condition: service_healthy
+    env_file:
+      - .env
     environment:
       DB_HOST: database
-      DB_USER: root
+      DB_USER: postgres
       DB_PASSWORD: secret
       DB_NAME: bee
 
   database:
     image: postgres:16.3-alpine3.20
+    init: true
+    ports:
+      - 5432:5432
     volumes:
-      - bee-mysql-data:/var/lib/mysql
+      - bee-postgres-data:/var/lib/postgres
       - ./sql-scripts:/docker-entrypoint-initdb.d
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U postgres" ]
@@ -23,8 +29,8 @@ services:
       timeout: 2s
       retries: 3
     environment:
-      MYSQL_ROOT_PASSWORD: secret
-      MYSQL_DATABASE: bee
+      POSTGRES_PASSWORD: secret
+      POSTGRES_DATABASE: bee
 
 volumes:
-  bee-mysql-data:
+  bee-postgres-data:
