--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -10,7 +10,10 @@ COPY go.sum ./
 RUN go mod download 
 
 # Copy source files required for build
-COPY *.go data/ worker/ listener/ ./
+COPY *.go ./
+COPY data/ ./data
+COPY worker/ ./worker
+COPY listener/ ./listener
 RUN go build -o server .
 
 FROM alpine:3.20 AS runtime
