--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -14,6 +14,7 @@ COPY *.go ./
 COPY data/ ./data
 COPY worker/ ./worker
 COPY listener/ ./listener
+COPY internal/ ./internal
 RUN go build -o server .
 
 FROM alpine:3.20 AS runtime
