--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "frontend"]
 	path = frontend
-	url = git@github.com:bartekpacia/bee-ci.git
-	branch = dockerize
+	url = git@github.com:kacaleksandra/bee-ci-frontend.git
+	branch = main
