--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,6 +25,8 @@ services:
 
   database:
     image: postgres:16.3-alpine3.20
+    ports:
+      - "5432:5432" # This is only used for connecting to the database during local development
     volumes:
       - bee-postgres-data:/var/lib/postgresql/data
       - ./backend/sql-scripts:/docker-entrypoint-initdb.d
