use alpine image for influxdb

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -13,7 +13,7 @@ RUN go mod download
 COPY *.go ./
 COPY data/ ./data
 COPY worker/ ./worker
-COPY listener/ ./listener
+COPY updater/ ./updater
 COPY internal/ ./internal
 RUN go build -o server .
 
