--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -42,6 +42,27 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: secret
 
+  backend-executor:
+    build: backend-executor
+    init: true
+    depends_on:
+      database:
+        condition: service_healthy
+      influxdb2:
+        condition: service_healthy
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: secret
+      DB_HOST: database
+      DB_PORT: 5432
+      DB_USER: postgres
+      DB_PASSWORD: secret
+      DB_NAME: bee
+    volumes:
+      - type: bind
+        source: /var/run/docker.sock
+        target: /var/run/docker.sock
+
   influxdb2:
     image: influxdb:2.7-alpine
     ports:
@@ -60,6 +81,11 @@ services:
       - type: volume
         source: influxdb2-config
         target: /etc/influxdb2
+    healthcheck:
+      test: ["CMD-SHELL", "influx ping"]
+      interval: 2s
+      timeout: 2s
+      retries: 3
 
 volumes:
   influxdb2-data:
