--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,6 +17,7 @@ services:
     env_file:
       - backend/.env
     environment:
+      SERVER_URL: http://localhost:8080
       PORT: 8080
       DB_HOST: database
       DB_PORT: 5432
