Small fix to .env.sample and bump frontend version

--- a/.env.sample
+++ b/.env.sample
@@ -7,6 +7,6 @@ DB_NAME=bee
 INFLUXDB_URL="http://influxdb2:8086"
 INFLUXDB_ORG="beeci"
 INFLUXDB_BUCKET="home"
-INFLUXDB_TOKEN=""abc123
+INFLUXDB_TOKEN="abc123"
 INFLUXDB_PASSWORD="secret"
 
