--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,11 +19,11 @@ services:
     environment:
       SERVER_URL: http://localhost:8080
       PORT: 8080
-      DB_HOST: database
-      DB_PORT: 5432
-      DB_USER: postgres
-      DB_PASSWORD: secret
-      DB_NAME: bee
+      DB_HOST: ${DB_HOST}
+      DB_PORT: ${DB_PORT}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_NAME: ${DB_NAME}
       DB_OPTS: sslmode=disable # sslmode=require for prod
 
   database:
@@ -39,8 +39,8 @@ services:
       timeout: 2s
       retries: 3
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: secret
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
 
   backend-executor:
     build: backend-executor
