influxdb: fix too short default password in .env.sample

--- a/.env.sample
+++ b/.env.sample
@@ -8,5 +8,4 @@ INFLUXDB_URL="http://influxdb2:8086"
 INFLUXDB_ORG="beeci"
 INFLUXDB_BUCKET="home"
 INFLUXDB_TOKEN="abcdefghijklmnoprstuvwxyz123456789"
-INFLUXDB_PASSWORD="secret"
-
+INFLUXDB_PASSWORD="very-secret"
