--- a/.env.sample
+++ b/.env.sample
@@ -1,10 +1,10 @@
-DB_HOST=database
+DB_HOST=database-postgres
 DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=secret
 DB_NAME=bee
 
-INFLUXDB_URL="http://influxdb2:8086"
+INFLUXDB_URL="http://database-influx:8086"
 INFLUXDB_ORG="beeci"
 INFLUXDB_BUCKET="home"
 INFLUXDB_TOKEN="abcdefghijklmnoprstuvwxyz123456789"
