--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,14 +5,18 @@ services:
     ports:
       - "3000:3000"
 
-  backend:
-    build: backend
+  server:
+    build:
+      context: backend
+      dockerfile: server.dockerfile
     init: true
     ports:
       - "8080:8080"
       - "40000:40000" # debugger port
     depends_on:
-      database:
+      database-postgres:
+        condition: service_healthy
+      database-influx:
         condition: service_healthy
     env_file:
       - backend/.env
@@ -26,8 +30,25 @@ services:
       DB_PASSWORD: ${DB_PASSWORD}
       DB_NAME: ${DB_NAME}
       DB_OPTS: sslmode=disable # sslmode=require for prod
+    
+  gh-updater:
+    build:
+      context: backend
+      dockerfile: gh-updater.dockerfile
+    init: true
+    depends_on:
+      - database-postgres
+    env_file:
+      - backend/.env
+    environment:
+      DB_HOST: ${DB_HOST}
+      DB_PORT: ${DB_PORT}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_NAME: ${DB_NAME}
+      DB_OPTS: sslmode=disable # sslmode=require for prod
 
-  database:
+  database-postgres:
     image: postgres:16.3-alpine3.20
     ports:
       - "5432:5432" # This is only used for connecting to the database during local development
@@ -47,9 +68,9 @@ services:
     build: backend-executor
     init: true
     depends_on:
-      database:
+      database-postgres:
         condition: service_healthy
-      influxdb2:
+      database-influx:
         condition: service_healthy
     env_file:
       - .env
@@ -58,7 +79,7 @@ services:
         source: /var/run/docker.sock
         target: /var/run/docker.sock
 
-  influxdb2:
+  database-influx:
     image: influxdb:2.7-alpine
     ports:
       - 8086:8086
@@ -71,10 +92,10 @@ services:
       DOCKER_INFLUXDB_INIT_BUCKET: ${INFLUXDB_BUCKET}
     volumes:
       - type: volume
-        source: influxdb2-data
+        source: bee-influx-data
         target: /var/lib/influxdb2
       - type: volume
-        source: influxdb2-config
+        source: bee-influx-config
         target: /etc/influxdb2
     healthcheck:
       test: ["CMD-SHELL", "influx ping"]
@@ -83,6 +104,6 @@ services:
       retries: 3
 
 volumes:
-  influxdb2-data:
-  influxdb2-config:
+  bee-influx-data:
+  bee-influx-config:
   bee-postgres-data:
