trying to make it run!

--- a/.env.sample
+++ b/.env.sample
@@ -4,8 +4,8 @@ DB_USER=postgres
 DB_PASSWORD=secret
 DB_NAME=bee
 
-INFLUXDB_URL="http://database-influx:8086"
-INFLUXDB_ORG="beeci"
-INFLUXDB_BUCKET="home"
-INFLUXDB_TOKEN="abcdefghijklmnoprstuvwxyz123456789"
-INFLUXDB_PASSWORD="very-secret"
+INFLUXDB_URL=http://database-influx:8086
+INFLUXDB_ORG=beeci
+INFLUXDB_BUCKET=home
+INFLUXDB_TOKEN=abcdefghijklmnoprstuvwxyz123456789
+INFLUXDB_PASSWORD=very-secret
