--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,7 +24,7 @@ services:
       SERVER_URL: localhost:8080
       PORT: 8080
       MAIN_DOMAIN: "" # must be empty for localhost
-      REDIRECT_URL: http://localhost:8080/dashboard
+      REDIRECT_URL: http://localhost:3000/dashboard
       DB_HOST: ${DB_HOST}
       DB_PORT: ${DB_PORT}
       DB_USER: ${DB_USER}
@@ -54,9 +54,8 @@ services:
 
   database-postgres:
     image: postgres:16.3-alpine3.20
-    ports: [
-        # "5432:5432" # only needed to connect to the database during local development
-      ]
+    ports: 
+      - "5432:5432" # only needed to connect to the database during local development
     volumes:
       - bee-postgres-data:/var/lib/postgresql/data
       - ./backend/sql-scripts:/docker-entrypoint-initdb.d
@@ -86,9 +85,8 @@ services:
 
   database-influx:
     image: influxdb:2.7-alpine
-    ports: [
-        # "8086:8086" # only needed to connect to the database during local development
-      ]
+    ports:
+      - "8086:8086" # only needed to connect to the database during local development
     environment:
       DOCKER_INFLUXDB_INIT_MODE: setup
       DOCKER_INFLUXDB_INIT_USERNAME: beeci
