--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,7 +31,11 @@ services:
       DB_PASSWORD: ${DB_PASSWORD}
       DB_NAME: ${DB_NAME}
       DB_OPTS: sslmode=disable # sslmode=require for prod
-      INFLUXDB_ENABLED: "true"
+      INFLUXDB_URL: http://influxdb2:8086
+      INFLUXDB_TOKEN: 9uNp_AJQknsl8OWY65VGyAVZ0wpLXrm9Ep9_4L4-LJJWkP4HJxQvgMCd0vIElfFVU-9cIMdPgPGuUZvaDJsn5g==
+      INFLUXDB_ORG: beeci
+      INFLUXDB_BUCKET: home
+      INFLUXDB_ENABLED: ""
 
   gh-updater:
     build:
@@ -52,10 +56,6 @@ services:
       DB_PASSWORD: ${DB_PASSWORD}
       DB_NAME: ${DB_NAME}
       DB_OPTS: sslmode=disable # sslmode=require for prod
-      INFLUXDB_URL: http://influxdb2:8086
-      INFLUXDB_TOKEN: 9uNp_AJQknsl8OWY65VGyAVZ0wpLXrm9Ep9_4L4-LJJWkP4HJxQvgMCd0vIElfFVU-9cIMdPgPGuUZvaDJsn5g==
-      INFLUXDB_ORG: beeci
-      INFLUXDB_BUCKET: home
 
   database-postgres:
     image: postgres:17.0-alpine3.20
