--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,9 @@
+GITHUB_APP_ID=
+GITHUB_APP_CLIENT_ID=
+GITHUB_APP_WEBHOOK_SECRET=
+GITHUB_APP_PRIVATE_KEY_BASE64=
+GITHUB_APP_CLIENT_SECRET=
+
 DB_HOST=database-postgres
 DB_PORT=5432
 DB_USER=postgres
@@ -9,3 +15,6 @@ INFLUXDB_ORG=beeci
 INFLUXDB_BUCKET=home
 INFLUXDB_TOKEN=abcdefghijklmnoprstuvwxyz123456789
 INFLUXDB_PASSWORD=very-secret
+
+REDIS_ADDRESS=database-redis:6379
+REDIS_PASSWORD=secret_redis
