--- a/executor/pyproject.toml
+++ b/executor/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "backend-executor"
+name = "executor"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
