--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,7 +29,7 @@ services:
       SERVER_URL: localhost:8080
       PORT: 8080
       MAIN_DOMAIN: "" # must be empty for localhost
-      REDIRECT_URL: http://localhost:3000/dashboard
+      FRONTEND_URL: http://localhost:3000
       DB_HOST: ${DB_HOST}
       DB_PORT: ${DB_PORT}
       DB_USER: ${DB_USER}
@@ -47,7 +47,7 @@ services:
       dockerfile: gh-updater.dockerfile
     init: true
     ports:
-      - "40001:40000" # debugger por
+      - "40001:40000" # debugger port
     depends_on:
       database-postgres:
         condition: service_healthy
@@ -56,7 +56,7 @@ services:
     env_file:
       - .env
     environment:
-      REDIRECT_URL: http://localhost:3000/dashboard
+      FRONTEND_URL: http://localhost:3000
       DB_HOST: ${DB_HOST}
       DB_PORT: ${DB_PORT}
       DB_USER: ${DB_USER}
